Fix: mobile contact textield alignment

--- a/src/component/AboutCards/style.module.scss
+++ b/src/component/AboutCards/style.module.scss
@@ -13,10 +13,12 @@
   justify-content: center;
   grid-template-columns: 1fr;
   grid-auto-rows: 1fr;
+  grid-row-gap: 1em;
 }
 
 @media (min-width: $md-screen) {
   .cards {
     grid-template-columns: 1fr 1fr;
+    grid-row-gap: 0;
   }
 }
