--- a/src/component/Backdrop/style.module.scss
+++ b/src/component/Backdrop/style.module.scss
@@ -13,8 +13,8 @@
   top: 0;
   left: 0;
   pointer-events: none;
-  background-color: black;
-  opacity: 0.2;
+  background-color: $purple;
+  opacity: 0.7;
 }
 
 .button {
