--- a/src/component/Popup/style.module.scss
+++ b/src/component/Popup/style.module.scss
@@ -7,6 +7,7 @@
   flex-direction: column;
   position: absolute;
   box-shadow: 0 0 0.2rem;
+  z-index: 1;
 }
 
 .close {
@@ -40,6 +41,10 @@
   justify-content: space-around;
   margin: 1em;
   width: 80%;
+  &:hover {
+    background-color: $purple;
+    color: $white;
+  }
 }
 
 .title {
